added styling to all pages

--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -19,7 +19,7 @@
 </ion-fab>
 
   <ion-card>
-    <ion-card-header>
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
           <ion-item>
