--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -17,6 +17,7 @@
 
     </ion-fab-list>
   </ion-fab>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
 
   <ion-card>
     <ion-card-header>
