--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -1,8 +1,6 @@
 <cranix-toolbar></cranix-toolbar>
 
- 
-<!--ion-content (window:resize)="onResize($event)"-->
-<ion-content id="carded">
+ <ion-content id="carded">
   <ion-row class="header-row">
   <ion-col size=6>
     <ion-title>{{'Manage institutes' | translate}}</ion-title>
@@ -20,9 +18,12 @@
     </ion-fab-list>
   </ion-fab>
 
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+
+
   <ion-card>
-    <ion-card-header>
-      <ion-row>
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
+      <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
           <ion-item>
             <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()"
