--- a/src/app/protected/cranix/devices/devices.page.html
+++ b/src/app/protected/cranix/devices/devices.page.html
@@ -17,8 +17,10 @@
       <ion-fab-button><ion-icon name="apps" (click)="openCollums($event)"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+
   <ion-card>
-    <ion-card-header>
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
           <ion-item>
