--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -1,22 +1,35 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
-  <ion-col size=6>
-    <ion-title>{{'Manage hwconfs' | translate}}</ion-title>
-  </ion-col>
-</ion-row>
-<ion-content (window:resize)="onResize($event)">
+
+
+<ion-content id="carded">
+  <ion-row class="header-row">
+    <ion-col size=6>
+      <ion-title>{{'Manage hwconfs' | translate}}</ion-title>
+    </ion-col>
+  </ion-row>
+    <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+      <ion-fab-button>
+        <ion-icon name="arrow-forward-circle"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-list side="start">
+        <ion-fab-button><ion-icon name="menu" (click)="openActions($event)"></ion-icon></ion-fab-button>
+        <ion-fab-button><ion-icon name="add-circle-outline" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
+        <ion-fab-button><ion-icon name="apps" (click)="openCollums($event)"></ion-icon></ion-fab-button>
+  
+      </ion-fab-list>
+    </ion-fab>
+    <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+
   <ion-card>
-    <ion-card-header>
-      <ion-row class="ion-align-items-center">
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
+      <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
           <ion-item>
             <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter">
             </ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size="7">
-        </ion-col>
-        <ion-col size="2">
+        <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="redirectToEdit($event,null)"
             matTooltip="{{'create a new institute' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
