--- a/src/app/protected/cranix/users/lists/users-import.component.html
+++ b/src/app/protected/cranix/users/lists/users-import.component.html
@@ -1,10 +1,12 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
+
+<ion-content id="carded">
+  
+  <ion-row class="header-row">
   <ion-col size=6>
     <ion-title>{{'Manage user imports' | translate}}</ion-title>
   </ion-col>
-</ion-row>
-<ion-content (window:resize)="onResize($event)">
+ </ion-row>
   <ion-card *ngIf="runningImport">
     <ion-card-header>
       <ion-row class="ion-align-items-center">
@@ -30,17 +32,18 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+
   <ion-card *ngIf="!runningImport">
-    <ion-card-header>
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
           <ion-item>
             {{'List of old Imports' | translate}}
           </ion-item>
         </ion-col>
-        <ion-col size="7">
-        </ion-col>
-        <ion-col size="2">
+     
+        <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="startImport()" matTooltip="{{'Start a new user import' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
