--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -8,13 +8,10 @@
       <ion-button fill="clear" (click)="closeWindow()">
         <ion-badge color="secondary" slot="end">118k</ion-badge>
       </ion-button>
-      <ion-button fill="clear" (click)="closeWindow()">
+      <ion-button fill="clear" (click)="retirectToSettings($event)" matTooltip="{{ 'Edit user preferences' | translate }}">
         <ion-icon color="danger" name="person"></ion-icon>
       </ion-button>
-      <ion-button fill="clear" (click)="closeWindow()">
-        <ion-icon color="success" name="flag"></ion-icon>
-      </ion-button>
-      <ion-button  fill="clear" (click)="logOut()">
+      <ion-button  fill="clear" (click)="logOut($event)">
         <ion-icon color="danger" name="walk"></ion-icon>
       </ion-button>
     </ion-buttons>
