--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -20,7 +20,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular #agGrid style="width: 100%; height: 450px;" class="ag-theme-balham"
+      <ag-grid-angular #agGrid style="width: 100%; height: 450px;" class="{{authService.agGridThema}}"
         [gridOptions]="memberOptions" [rowData]="memberData" [columnDefs]="columnDefs" [context]="context"
         [rowSelection]="memberSelection" (gridReady)="onMemberReady($event)"
         (selectionChanged)="onMemberSelectionChanged()" id="memberTable" [autoGroupColumnDef]="autoGroupColumnDef">
