--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -22,7 +22,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="memberOptions"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" [gridOptions]="memberOptions"
               [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
               (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
             </ag-grid-angular>
@@ -43,7 +43,7 @@
                 id="nonMemberFilter">
               </ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="noMemberOptions"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" [gridOptions]="noMemberOptions"
               [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="noMemberSelection"
               (gridReady)="onNoMemberReady($event)" (selectionChanged)="onNoMemberSelectionChanged()"
               id="noMemberTable">
