--- a/src/app/protected/cranix/rooms/rooms.page.html
+++ b/src/app/protected/cranix/rooms/rooms.page.html
@@ -43,7 +43,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 450px;" class="ag-theme-balham" [gridOptions]="gridOptions"
+      <ag-grid-angular style="width: 100%; height: 450px;" class="{{authService.agGridThema}}" [gridOptions]="gridOptions"
         [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
         (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
       </ag-grid-angular>
