--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -23,7 +23,7 @@
                 id="memberFilter"></ion-input>
             </ion-item>
             <ion-item></ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="memberOptions"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" [gridOptions]="memberOptions"
               [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
               (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
             </ag-grid-angular>
@@ -45,7 +45,7 @@
               </ion-input>
             </ion-item>
             <ion-item></ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="ag-theme-balham" [gridOptions]="noMemberOptions"
+	    <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" [gridOptions]="noMemberOptions"
               [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="noMemberSelection"
               (gridReady)="onNoMemberReady($event)" (selectionChanged)="onNoMemberSelectionChanged()"
               id="noMemberTable">
