Apply changes for the action cell for all tables.

--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -20,8 +20,8 @@
           <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new institute' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
-            <ion-icon slot="icon-only" name="menu"></ion-icon>
+          <ion-button size="small" (click)="openActions($event,null)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
+            <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
