--- a/src/app/shared/actions/download-softwares/download-softwares.component.html
+++ b/src/app/shared/actions/download-softwares/download-softwares.component.html
@@ -2,6 +2,9 @@
   <ion-toolbar>
     <ion-title>{{  'Select softwares to download' | translate }}</ion-title>
     <ion-buttons slot="end">
+      <ion-button fill="clear" size="small" (click)="startDownload()">
+        <ion-icon slot="icon-only" color="primary" name="cloud-download"></ion-icon>
+      </ion-button>
       <ion-button fill="clear" size="small" (click)="closeWindow()">
         <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
       </ion-button>
@@ -9,17 +12,17 @@
   </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
-  <!--form (ngSubmit)="processModal(event)"-->
-  <!-- form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)"-->
-    <ion-list lines="full" class="ion-no-margin ion-no-padding" *ngFor="let package of objectService.packagesAvailable">
-      <ion-item>
-        <!-- ion-checkbox slot="start" formControlName="{{package.name}}" color="secondary"></ion-checkbox -->
-        <ion-checkbox slot="start"  color="secondary"></ion-checkbox>
-        <ion-label>{{package.name}} {{ package.version}}</ion-label>
-      </ion-item>
-    </ion-list>
-    <div class="ion-padding">
-      <ion-button expand="block" type="submit" class="ion-no-margin">{{ "OK" | translate }}</ion-button>
-    </div>
-  <!-- /form -->
+  <ion-item>
+    <ion-input placeholder="{{'search' | translate }}" (input)="packagFilterChanged()" id="packageFilter">
+    </ion-input>
+  </ion-item>
+    <ag-grid-angular 
+      style="width: 100%; height: 90%;"
+      class="ag-theme-material"
+      rowSelection="multiple"
+      [rowData]="objectService.packagesAvailable" 
+      [columnDefs]="columns"
+      (gridReady)="tableReady($event)"
+      id="agGridTableDS">
+    </ag-grid-angular>
 </ion-content>
