--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -1,5 +1,4 @@
 <cranix-toolbar></cranix-toolbar>
-
 <ion-content id="carded">
   <ion-row class="header-row">
   <ion-col size=6>
@@ -13,7 +12,7 @@
     <ion-fab-list side="start">
       <ion-fab-button><ion-icon name="cloud-download" (click)="downloadSoftwares($event)"></ion-icon></ion-fab-button>
       <ion-fab-button><ion-icon name="add-circle-outline" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="refresh-outline" (click)="readInstallableSoftware($event,null)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="refresh-outline" (click)="readInstallableSoftware()"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
   <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
