--- a/src/app/protected/cranix/users/lists/users-import.component.html
+++ b/src/app/protected/cranix/users/lists/users-import.component.html
@@ -57,7 +57,7 @@
         <ion-icon color="warning" name="sync" style="height:30px;width:30px"></ion-icon>
       </ion-thumbnail>
       <ion-thumbnail *ngIf="!import.test">
-        <ion-icon color="success" name="checkmark-done-circle-outline" style="height:30px;width:30px"></ion-icon>
+        <ion-icon color="success" name="checkmark-sharp" style="height:30px;width:30px"></ion-icon>
       </ion-thumbnail>
       <h3 *ngIf="import.test">{{import.startTime}} {{'Test import' | translate}}</h3>
       <h3 *ngIf="!import.test">{{import.startTime}}</h3>
