--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -20,7 +20,7 @@
           <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=4>
             <ion-button size="small" fill="clear" type="submit" class="ion-no-margin" [disabled]="!editForm.valid"
               matTooltip="{{'Apply chnages.' | translate }}">
-              <ion-icon slot="icon-only" color="success" name="checkmark-done-circle"></ion-icon>
+              <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
             </ion-button>
             <ion-button size="small" fill="clear" (click)="setNextDefaults()"
               matTooltip="{{'Set the next default values' | translate }}">
