--- a/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
+++ b/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
@@ -19,7 +19,7 @@
           <ion-col size=12 sizeLg=2 sizeXl=2>
             <ion-button size="small" type="submit" color="success" class="ion-no-margin" [disabled]="!editForm.valid"
               matTooltip="{{'Apply changes' | translate }}">
-              <ion-icon slot="icon-only" name="checkmark-done-circle"></ion-icon>
+              <ion-icon slot="icon-only" name="checkmark-sharp"></ion-icon>
             </ion-button>
             <ion-button size="small" color="warning" (click)="cleanUp($event)"
               matTooltip="{{'Remove arhived images' | translate }}">
