--- a/src/app/protected/cranix/rooms/details/edit/room-edit.page.html
+++ b/src/app/protected/cranix/rooms/details/edit/room-edit.page.html
@@ -19,7 +19,7 @@
           <ion-col size=12 sizeLg=2 sizeXl=2>
             <ion-button size="small" type="submit" class="ion-no-margin" [disabled]="!editForm.valid"
               matTooltip="{{'Apply chnages.' | translate }}">
-              <ion-icon slot="icon-only" color="success" name="checkmark-done-circle"></ion-icon>
+              <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
             </ion-button>
             <ion-button size="small" (click)="delete($event)"
               matTooltip="{{'Delete room.' | translate }}">
