--- a/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
@@ -1,34 +1,42 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row">
+<ion-content id="carded">
+  <ion-row class="header-row">
+  <ion-col size=6>
+    <ion-title  matTooltip="{{ cephalixService.selectedList }}">{{'Define synchronisation of objects: institutes' | translate}}</ion-title>
+  </ion-col>
+</ion-row> 
+<ion-row *ngIf="cephalixService.selectedInstitutes.length == 0">
   <ion-col size=12>
-    <ion-title  matTooltip="{{ cephalixService.selectedList }}">{{ 'Define synchronisation of objects:' | translate}}</ion-title>
+    <ion-label color="danger">{{'You have to select some institutes to be able to use this site.'}}</ion-label>
   </ion-col>
 </ion-row>
-<ion-content (window:resize)="onResize($event)">
+  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+    <ion-fab-button>
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-fab-button><ion-icon name="code-working" color="success"  (click)="startSync($event)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="code-working" color="danger"  (click)="stopSync($event)"></ion-icon></ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="quickFilter"showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
   <ion-card>
-    <ion-card-header>
-      <ion-row *ngIf="cephalixService.selectedInstitutes.length == 0">
-        <ion-col size=12>
-          <ion-label color="danger">{{'You have to select some institutes to be able to use this site.'}}</ion-label>
-        </ion-col>
-      </ion-row>
-      <ion-row class="ion-align-items-center">
+    <ion-card-header class="hidden-xs hidden-sm hidden-md">
+      <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
           <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
+            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"  id="memberFilter">
             </ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size="7">
-        </ion-col>
-        <ion-col>
+        <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="startSync($event)"
             matTooltip="{{'Start  synchronisation of selected objects to the selected institutes.' | translate }} {{ cephalixService.selectedList }}">
-            <ion-icon slot="icon-only" color="success" name="power"></ion-icon>
+            <ion-icon slot="icon-only" color="success" name="code-working"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="stopSync($event)"
             matTooltip="{{'Stop  synchronisation of selected objects to the selected institutes.' | translate }}  {{ cephalixService.selectedList }}">
-            <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+            <ion-icon slot="icon-only" color="danger" name="code-working"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
