Update agGrid to 23.0 Import agGrid thema alpine. Fix quickFilter.

--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -10,7 +10,7 @@
       <ion-row class="ion-align-items-center">
         <ion-col size=3 >
           <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter">
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
             </ion-input>
           </ion-item>
         </ion-col>
