--- a/src/app/protected/cranix/rooms/rooms.page.html
+++ b/src/app/protected/cranix/rooms/rooms.page.html
@@ -23,7 +23,7 @@
 
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter"
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilterMD')" id="quickFilterMD"
     showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
 
   <ion-card>
@@ -31,7 +31,7 @@
       <ion-row class="ion-align-items-center">
         <ion-col size="3">
           <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="quickFilter">
+            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
             </ion-input>
           </ion-item>
         </ion-col>
