Befor update to angular 9.

--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -56,15 +56,37 @@
         </ion-item>
         <ion-item *ngSwitchCase="'date'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}" displayFormat="YYYY-MM-DD"
-            done-text="{{'apply' | translate }}" max="2100" value="{{object[key] | date:'yyyy-MM-dd'}}"></ion-datetime>
+          <!-- label *ngSwitchCase="'date'">
+            {{ key | translate }}
+            <input [owlDateTime]="dt1">
+            <span class="trigger" [owlDateTimeTrigger]="dt1">
+              <i class="fas fa-calendar-alt"></i>
+            </span>
+            <owl-date-time #dt1></owl-date-time>
+          </label -->
+          <!--mat-form-field appearance="standard">
+            <mat-label>{{ key | translate }}</mat-label>
+            <input matInput formControlName="{{key}}" [matDatepicker]="picker">
+            <mat-datepicker-toggle matPrefix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field -->
+          <!-- ion-input formControlName="{{key}}" type="text" value="{{object[key] | date:'yyyy-MM-dd'}}"></ion-input -->
+          <ion-datetime formControlName="{{key}}" cancelText="{{ 'cancel' | translate }}" displayFormat="YYYY-MM-DD"
+            doneText="{{'apply' | translate }}" max="2100" value="{{object[key] | date:'yyyy-MM-dd'}}"
+            pickerOptions="pickerOptions"></ion-datetime>
         </ion-item>
         <ion-item *ngSwitchCase="'date-time'">
-          <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}"
+          <mat-form-field fxFlexOffset="2" fxFlex="32">
+            <ion-label position="stacked">{{ key | translate }}</ion-label>
+            <ion-input matInput formControlName="{{key}}" [matDatepicker]="picker">
+              <mat-datepicker #picker></mat-datepicker>
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            </ion-input>
+          </mat-form-field>
+          <!-- ion-datetime formControlName="{{key}}" cancel-text="{{ 'cancel' | translate }}"
             displayFormat="YYYY-MM-DD HH:mm" done-text="{{'apply' | translate }}" max="2100"
             value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
-          </ion-datetime>
+          </ion-datetime -->
         </ion-item>
         <ion-item *ngSwitchCase="'idPipe'">
           <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
