--- a/src/app/protected/cranix/system/status/system-status.component.html
+++ b/src/app/protected/cranix/system/status/system-status.component.html
@@ -15,44 +15,32 @@
       <ion-fab-button><ion-icon color="danger" name="power" (click)="shutDown($event)"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilterMD')" id="quickFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
   <ion-card>
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')"  id="quickFilter">
-            </ion-input>
-          </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="update($event)"  matTooltip="{{'create a new institute' | translate }}">
+          <ion-button size="small" (click)="update($event)"  matTooltip="{{'Update the server.' | translate }}">
             <ion-icon slot="icon-only" name="trending-up"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="restart($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
+          <ion-button size="small" (click)="restart($event)" matTooltip="{{'Restart the server.' | translate }}" >
             <ion-icon slot="icon-only" name="refresh"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="shutDown($event)" matTooltip="{{'select the columns to show' | translate }}">
+          <ion-button size="small" (click)="shutDown($event)" matTooltip="{{'Shut down the server.' | translate }}">
             <ion-icon slot="icon-only" color="danger" name="power"></ion-icon>
           </ion-button>
         </ion-col>
       </ion-row>
     </ion-card-header>
-    <ion-card-content>
-      <ion-grid>
+     <ion-card-content>
+      <ion-grid *ngIf="systemStatus">
         <ion-row>
-          <ion-col>
-            <ag-charts-angular  style="height: 100%"    [options]="systemStatus['softwares']"></ag-charts-angular>
-          </ion-col>
-          <ion-col>
-            <ag-charts-angular  style="height: 100%"    [options]="systemStatus['devices']"></ag-charts-angular>
-          </ion-col>
-          <ion-col>
-            <ag-charts-angular  style="height: 100%"    [options]="systemStatus['users']"></ag-charts-angular>
-          </ion-col>
-          <ion-col>
-            <ag-charts-angular  style="height: 100%"    [options]="systemStatus['rooms']"></ag-charts-angular>
+          <ion-col *ngFor="let key of objectKeys">
+            <ag-charts-angular  style="height: 200px"   [options]="systemStatus[key]"></ag-charts-angular>
           </ion-col>
         </ion-row>
       </ion-grid>
     </ion-card-content>
+    </ion-card>
+    </ion-content>
