--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -19,6 +19,10 @@
   <ion-content fullscreen>
     <ion-list lines="full" class="ion-no-margin ion-no-padding">
       <div *ngFor=" let key of objectKeys" [ngSwitch]="objectService.typeOf(key,object,objectAction)">
+        <ion-item *ngSwitchCase="'file'">
+          <ion-label position="stacked">{{ key | translate }}</ion-label>
+          <input type="file" formControlName="{{key}}" >
+        </ion-item>
         <ion-item *ngSwitchCase="'booleanTrue'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
           <ion-toggle slot="end" formControlName="{{key}}" color="secondary" checked></ion-toggle>
