--- a/src/app/protected/cranix/devices/devices.page.html
+++ b/src/app/protected/cranix/devices/devices.page.html
@@ -1,6 +1,4 @@
 <cranix-toolbar></cranix-toolbar>
-
-
 <ion-content id="carded">
   <ion-row class="header-row">
   <ion-col size=6>
@@ -18,10 +16,9 @@
     </ion-fab-list>
   </ion-fab>
   <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilterMD')" id="quickFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-
   <ion-card>
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
-      <ion-row class="ion-align-items-center">
+      <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
           <ion-item>
             <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
@@ -42,7 +39,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;"class="{{authService.agGridThema}}" [gridOptions]="gridOptions"
+      <ag-grid-angular style="width: 100%; height:  450px;"class="{{authService.agGridThema}}" [gridOptions]="gridOptions"
         [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
         (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
       </ag-grid-angular>
