--- a/src/app/protected/cranix/rooms/rooms.page.html
+++ b/src/app/protected/cranix/rooms/rooms.page.html
@@ -1,5 +1,4 @@
 <cranix-toolbar></cranix-toolbar>
-
 <ion-content id="carded">
   <ion-row class="header-row">
     <ion-col size=6>
@@ -20,22 +19,19 @@
       <ion-fab-button>
         <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
       </ion-fab-button>
-
     </ion-fab-list>
   </ion-fab>
   <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilterMD')" id="quickFilterMD"
     showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
-
   <ion-card>
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
-      <ion-row class="ion-align-items-center">
+      <ion-row class="hidden-xs hidden-sm hidden-md">
         <ion-col size="3">
           <ion-item>
             <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('quickFilter')" id="quickFilter">
             </ion-input>
           </ion-item>
         </ion-col>
-
         <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="redirectToEdit($event,null)"
             matTooltip="{{'create a new institute' | translate }}">
