Enhance translation. First step to implement import.

--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -44,7 +44,7 @@
             <ion-icon slot="icon-only" name="business"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openCollums($event)"
-            matTooltip="{{'select the columns to show' | translate }}">
+            matTooltip="{{'Select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
           </ion-button>
         </ion-col>
