--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -27,15 +27,15 @@
         </ion-col>
         <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="redirectToEdit($event,null)"
-            matTooltip="{{'create a new institute' | translate }}">
+            matTooltip="{{'Create a new institute' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openActions($event,null)"
-            matTooltip="{{'apply actions on the selected objects' | translate }}">
+            matTooltip="{{'Apply actions on the selected objects' | translate }}">
             <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openCollums($event)"
-            matTooltip="{{'select the columns to show' | translate }}">
+            matTooltip="{{'Select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
           </ion-button>
         </ion-col>
