--- a/src/app/protected/cephalix/institutes/details/notices/institute-notices.component.html
+++ b/src/app/protected/cephalix/institutes/details/notices/institute-notices.component.html
@@ -10,7 +10,7 @@
   <ion-col size="1">
   </ion-col>
   <ion-col size="2">
-    <ion-button size="small" (click)="redirectToAdd($event)" matTooltip="{{'create a new ticket' | translate }}">
+    <ion-button size="small" (click)="redirectToAdd($event)" matTooltip="{{'Create a new ticket' | translate }}">
       <ion-icon name="add-circle-outline"></ion-icon>
     </ion-button>
   </ion-col>
