--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -24,7 +24,7 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
+          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'Select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
           </ion-button>
         </ion-col>
