--- a/src/app/protected/cranix/rooms/details/devices/room-devices.page.html
+++ b/src/app/protected/cranix/rooms/details/devices/room-devices.page.html
@@ -17,13 +17,13 @@
         <ion-col size="7">
         </ion-col>
         <ion-col size="2">
-          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'create a new device' | translate }}">
+          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new device' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'apply actions on the selected objects' | translate }}" >
+          <ion-button size="small" (click)="openActions($event)" matTooltip="{{'Apply actions on the selected objects' | translate }}" >
             <ion-icon slot="icon-only" name="menu"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'select the columns to show' | translate }}">
+          <ion-button size="small" (click)="openCollums($event)" matTooltip="{{'Select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
           </ion-button>
         </ion-col>
