--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -21,7 +21,7 @@
       <div *ngFor=" let key of objectKeys" [ngSwitch]="objectService.typeOf(key,object,objectAction)">
         <ion-item *ngSwitchCase="'file'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <input type="file" formControlName="{{key}}" >
+          <input type="file" formControlName="{{key}}"  (change)="handleFileInput($event.target.files)">
         </ion-item>
         <ion-item *ngSwitchCase="'booleanTrue'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
