--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -136,3 +136,15 @@ ion-card {
   }
   }
 }
+
+
+/*
+ * error and short messages classes
+ *
+ *
+ */
+
+ .error-text{
+  color: red;
+  font-size: smaller;
+ }
