--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -15,16 +15,16 @@
               <ion-input formControlName="username" type="text" placeholder="{{ 'username' | translate }}"></ion-input>
             </ion-item>
 
-            <ion-item *ngIf="authForm.controls.username.hasError('required') && authForm.controls.username.touched">
-              <p>{{ 'Sorry, field username is required!' | translate }}</p>
+            <ion-item lines="none" *ngIf="authForm.controls.username.hasError('required') && authForm.controls.username.touched">
+              <p class="error-text">{{ 'Sorry, field username is required!' | translate }}</p>
             </ion-item>
 
             <ion-item>
               <ion-input formControlName="password" type="password" placeholder="{{ 'password' | translate }}">
               </ion-input>
             </ion-item>
-            <ion-item *ngIf="authForm.controls.password.hasError('required') && authForm.controls.password.touched">
-              <p>{{ 'Sorry, field password is required!' | translate }}</p>
+            <ion-item lines="none" *ngIf="authForm.controls.password.hasError('required') && authForm.controls.password.touched">
+              <p  class="error-text">{{ 'Sorry, field password is required!' | translate }}</p>
             </ion-item>
           </form>
         </ion-card-content>
