--- a/src/app/protected/cranix/system/system.page.html
+++ b/src/app/protected/cranix/system/system.page.html
@@ -7,10 +7,10 @@
         <ion-label>{{ 'System status' | translate}}</ion-label>
       </ion-tab-button>
       
-      <ion-tab-button tab="support">
+      <!-- ion-tab-button tab="support">
         <ion-icon name="help"></ion-icon>
         <ion-label>{{ 'Support' | translate}}</ion-label>
-      </ion-tab-button>
+      </ion-tab-button -->
   
       <ion-tab-button tab="config">
         <ion-icon name="cog"></ion-icon>
