--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -2,64 +2,70 @@
  * edited styling for ag-grid 
  *
  */
- $grid-breakpoints :(
-    xs: 0,
-    sm: 576px,
-    md: 768px,
-    lg: 992px,
-    xl: 1200px
-  );
+$grid-breakpoints :(xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px);
 
- $breakpoints-keys: map-keys($grid-breakpoints);
- $breakpoints-values: map-values($grid-breakpoints);
- @for $i from 1 to length($breakpoints-keys)+1 {
-   @if $i < length($breakpoints-keys) {
-     .hidden-#{nth($breakpoints-keys, $i)} {
-       @media (min-width: nth($breakpoints-values, $i)) and (max-width: #{nth($breakpoints-values, $i+1) - 1}) {
-         display: none !important;
-       }
-     }
-   } @else {
-     .hidden-#{nth($breakpoints-keys, $i)} {
-       @media (min-width: nth($breakpoints-values, $i)) {
-         display: none !important;
-       }
-     }
-   }
- }
+$breakpoints-keys  : map-keys($grid-breakpoints);
+$breakpoints-values: map-values($grid-breakpoints);
 
- .ag-row .ag-cell {
-    display: flex;
-    //justify-content: center; /* align horizontal *
-    align-items: center;
-    text-overflow: ellipsis;
-    border-right: 0px!important;
-    border-left-width: 0px!important;
-} 
+@for $i from 1 to length($breakpoints-keys)+1 {
+  @if $i < length($breakpoints-keys) {
+    .hidden-#{nth($breakpoints-keys, $i)} {
+      @media (min-width: nth($breakpoints-values, $i)) and (max-width: #{nth($breakpoints-values, $i+1) - 1}) {
+        display: none !important;
+      }
+    }
+  }
+
+  @else {
+    .hidden-#{nth($breakpoints-keys, $i)} {
+      @media (min-width: nth($breakpoints-values, $i)) {
+        display: none !important;
+      }
+    }
+  }
+}
+
+.ag-row .ag-cell {
+  display          : flex;
+  //justify-content: center; /* align horizontal *
+  align-items      : center;
+  text-overflow    : ellipsis;
+  border-right     : 0px !important;
+  border-left-width: 0px !important;
+}
 
 
 /*.ag-theme-material .ag-header-cell {
  //background-color: rgba(189, 195, 199, 0.5);
 }*/
-.ag-theme-material .ag-icon-checkbox-unchecked{    
-    font-size: 15px;
+.ag-theme-material .ag-icon-checkbox-unchecked {
+  font-size: 15px;
 }
-.ag-theme-material .ag-icon-checkbox-checked{
-    font-size: 15px;
+
+.ag-theme-material .ag-icon-checkbox-checked {
+  font-size: 15px;
 }
+
 .ag-theme-material .ag-icon-checkbox-indeterminate:before {
   font-size: 15px;
 
 }
-.ag-theme-material .ag-header-row:first-child .ag-header-cell{
-    padding-left: 4px;
+
+.ag-theme-material .ag-header-row:first-child .ag-header-cell {
+  padding-left: 4px;
 }
-.ag-theme-material .ag-selection-checkbox:not(.ag-hidden) ~ .ag-cell-value:not(:empty){
-    margin-left: 12px;
+
+.ag-theme-material .ag-selection-checkbox:not(.ag-hidden)~.ag-cell-value:not(:empty) {
+  margin-left: 12px;
 }
-.ag-header-cell-label .ag-header-cell-text{
-    font-size: 12px;
-    margin: auto;
+
+.ag-header-cell-label .ag-header-cell-text {
+  font-size: 12px;
+  margin   : auto;
 }
 
 /*
@@ -68,71 +74,75 @@
  */
 
 #carded {
-margin-top: 5px;
---background : #f5f5f5;
+  margin-top  : 5px;
+  --background: #f5f5f5;
 
-.header-row{
-    padding-top: 6px;
-    height: 33px;
+  .header-row {
+    padding-top      : 6px;
+    height           : 33px;
     //justify-content: center;
     //align-content: flex-start;
-}
-
-@media only screen and (max-width: 768px) {
-  ion-card {
-    //flex-grow: 1;
-    height: 93%;
-   // display: grid;
-   // grid-template-rows: 12%;
-    ion-card-header{
-        grid-row: 1/2;
-        height: 0%;
-       /* border-style: ridge;
-        border-top: none;
-        border-left: none;
-        border-right: none;*/
-    }
-    ion-card-content {
-    padding-top: 3px;  
-    grid-row: 2/2;
-    height: 100%;
-    grid-column: 1/1;
-    overflow: hidden;
-    border-style: none;
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-   // border-width: 1px;
-    }  
   }
-}
-@media only screen and (min-width: 769px) {
 
-ion-card {
-    //flex-grow: 1;
-    height: 93%;
-    display: grid;
-    grid-template-rows: 12%;
-    ion-card-header{
-        grid-row: 1/2;
-        height: 100%;
-       /* border-style: ridge;
-        border-top: none;
-        border-left: none;
-        border-right: none;*/
+  @media only screen and (max-width: 768px) {
+    ion-card {
+      //flex-grow: 1;
+      height: 93%;
+
+      // display: grid;
+      // grid-template-rows: 12%;
+      ion-card-header {
+        grid-row       : 1/2;
+        height         : 0%;
+        /* border-style: ridge;
+        border-top     : none;
+        border-left    : none;
+        border-right   : none;*/
+      }
+
+      ion-card-content {
+        padding-top    : 3px;
+        grid-row       : 2/2;
+        height         : 100%;
+        grid-column    : 1/1;
+        overflow       : hidden;
+        border-style   : none;
+        border-bottom  : none;
+        border-left    : none;
+        border-right   : none;
+        // border-width: 1px;
+      }
     }
-    ion-card-content {
-    padding-top: 3px;  
-    grid-row: 2/2;
-    height: 100%;
-    grid-column: 1/1;
-    overflow: hidden;
-    border-style: ridge;
-    border-bottom: none;
-    border-left: none;
-    border-right: none;
-    border-width: 1px;
-    }  
   }
+
+  @media only screen and (min-width: 769px) {
+
+    ion-card {
+      //flex-grow: 1;
+      height            : 93%;
+      display           : grid;
+      grid-template-rows: 12%;
+
+      ion-card-header {
+        grid-row       : 1/2;
+        height         : 100%;
+        /* border-style: ridge;
+        border-top     : none;
+        border-left    : none;
+        border-right   : none;*/
+      }
+      ion-card-content {
+        padding-top  : 3px;
+        grid-row     : 2/2;
+        height       : 100%;
+        grid-column  : 1/1;
+        overflow     : hidden;
+        border-style : ridge;
+        border-bottom: none;
+        border-left  : none;
+        border-right : none;
+        border-width : 1px;
+      }
+    }
   }
 }
