--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 <ion-row class="header-row">
   <ion-col size=12>
-    <ion-title>{{ 'Modify members of selected group' | translate}}: "{{group.name}}" {{group.description}}
+    <ion-title>{{ 'Modify members of selected group:' | translate}} "{{group.name}}" {{group.description}}
       {{group.groupType | translate}}
     </ion-title>
   </ion-col>
