--- a/src/app/protected/cranix/rooms/details/devices/room-devices.page.html
+++ b/src/app/protected/cranix/rooms/details/devices/room-devices.page.html
@@ -14,9 +14,7 @@
             </ion-input>
           </ion-item>
         </ion-col>
-        <ion-col size="7">
-        </ion-col>
-        <ion-col size="2">
+        <ion-col offset=5 size="4">
           <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new device' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
