Use caret-back instead of list icon for navigate back to the wohle list of objects.

--- a/src/app/protected/cephalix/institutes/lists/institutes-lists.page.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-lists.page.html
@@ -3,7 +3,7 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="all">
-        <ion-icon name="list"></ion-icon>
+        <ion-icon name="caret-back"></ion-icon>
         <ion-label>{{ 'All institutes' | translate}}</ion-label>
       </ion-tab-button>
 
