--- a/src/app/protected/cranix/devices/devices.page.html
+++ b/src/app/protected/cranix/devices/devices.page.html
@@ -2,7 +2,7 @@
 <ion-content id="carded">
   <ion-row class="header-row">
   <ion-col size=6>
-    <ion-title>{{'Manage institutes' | translate}}</ion-title>
+    <ion-title>{{'Manage devices' | translate}}</ion-title>
   </ion-col>
   </ion-row>
   <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
