--- a/src/app/protected/cranix/rooms/details/room-details.page.html
+++ b/src/app/protected/cranix/rooms/details/room-details.page.html
@@ -2,6 +2,11 @@
 <ion-row class="header-row"></ion-row>
 <ion-tabs>
     <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="all">
+        <ion-icon name="caret-back"></ion-icon>
+        <ion-label>{{ 'All rooms' | translate}}</ion-label>
+      </ion-tab-button>
+
       <ion-tab-button tab="edit">
         <ion-icon name="create"></ion-icon>
         <ion-label>{{ 'edit' | translate}}</ion-label>
