--- a/src/app/protected/cranix/devices/details/device-details.page.html
+++ b/src/app/protected/cranix/devices/details/device-details.page.html
@@ -3,7 +3,7 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="all">
-        <ion-icon name="list"></ion-icon>
+        <ion-icon name="caret-back"></ion-icon>
         <ion-label>{{ 'All devices' | translate}}</ion-label>
       </ion-tab-button>
       
