--- a/src/app/protected/cranix/system/status/system-status.component.html
+++ b/src/app/protected/cranix/system/status/system-status.component.html
@@ -22,7 +22,7 @@
         <ion-col size="3">
         </ion-col>
         <ion-col offset="5" size="4" class="ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="support($event)"  matTooltip="{{'Create a support request.' | translate }}">
+          <ion-button size="small" (click)="support($event)"  matTooltip="{{'Add support' | translate }}">
             <ion-icon slot="icon-only" name="help"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="update($event)"  matTooltip="{{'Update the server.' | translate }}">
