--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -23,7 +23,7 @@
                 id="memberFilter"></ion-input>
             </ion-item>
             <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" [gridOptions]="memberOptions"
-              [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
+              [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" rowSelection="multiple"
               (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
             </ag-grid-angular>
           </ion-col>
@@ -44,7 +44,7 @@
               </ion-input>
             </ion-item>
             <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" [gridOptions]="noMemberOptions"
-              [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="noMemberSelection"
+              [rowData]="noMemberData" [columnDefs]="columnDefs" [context]="context" rowSelection="multiple"
               (gridReady)="onNoMemberReady($event)" (selectionChanged)="onNoMemberSelectionChanged()"
               id="noMemberTable">
             </ag-grid-angular>
